--- a/sobre.html
+++ b/sobre.html
@@ -9,17 +9,17 @@
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-BR">
   <meta name="author" content="Francisco de Paula (euChico)">
-  <meta name="description" content="{{DESCRIÇÃO}}">
+  <meta name="description" content="Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 31 anos.">
   <meta name="creator" content="Francisco de Paula (euChico)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="euCHICO - Sobre">
-  <meta property="og:description" content="{{DESCRIÇÃO}}">
+  <meta property="og:description" content="Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 31 anos.">
   <meta property="og:url" content="http://euchico.com/sobre">
   <meta property="og:site_name" content="euCHICO">
-  <meta property="og:image" content="{{IMAGEM}}">
+  <meta property="og:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
 
@@ -28,8 +28,8 @@
   <meta name="twitter:site" content="@eueuchico">
   <meta name="twitter:creator" content="@eueuchico">
   <meta name="twitter:title" content="euCHICO - Sobre">
-  <meta name="twitter:description" content="{{DESCRIÇÃO}}">
-  <meta name="twitter:image" content="{{IMAGEM}}">
+  <meta name="twitter:description" content="Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 31 anos.">
+  <meta name="twitter:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
   <!-- / SEO -->
   <!-- / METAs -->
 
@@ -56,7 +56,7 @@
     <!-- NAVEGAÇÃO -->
     <nav class="navbar navbar-expand-sm navbar-light">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <h1 class="logo">
             <span>eu</span><span>CHICO</span>
           </h1>
@@ -74,11 +74,11 @@
         
         <!-- opções -->
         <div class="collapse navbar-collapse" id="menu-options">
-          <ul class="navbar-nav ms-auto ">
-            <li class="nav-item"><a class="nav-link" href="#" data-nav="inicio">início</a></li>
-            <li class="nav-item active"><a class="nav-link disabled" href="#">sobre</a></li>      
-            <li class="nav-item"><a class="nav-link" href="#">portfólio</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">currículo</a></li>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="index.html" data-nav="inicio">início</a></li>
+            <li class="nav-item active"><a class="nav-link disabled">sobre</a></li>      
+            <li class="nav-item"><a class="nav-link" href="portfolio.html">portfólio</a></li>
+            <li class="nav-item"><a class="nav-link" href="curriculo.html">currículo</a></li>
             <li class="nav-item"><a class="nav-link" href="#" data-nav="blog">blog</a></li>
 
             <li class="nav-item d-none d-sm-block">
@@ -98,58 +98,60 @@
   </div> <!-- / background navegador -->
 
   <!-- SEÇÃO: BIOGRAFIA -->
-  <section class="container">
+  <section id="sec-biography" class="container">
     <div class="text-center">
-      <img class="img-fluid" src="assets/img/euchico-perfil-2.jpg" alt="Avatar euChico">
+      <img class="img-fluid img-profile" src="assets/img/euchico-perfil-2.jpg" alt="Avatar euChico">
 
       <h2>Francisco de Paula</h2>
 
-      <hr>
+      <hr class="hr-standart">
     </div>
 
-    <p>
-      Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 31 anos. Estudei e atuei na Ciência da Computação, hoje faço Licenciatura em Matemática e sempre amei Arte, isso mostra que minha trajetória não é nada linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…” (Saint-Exupéry).
+    <p class="abstract">
+      Sou Francisco de Paula, moro no Rio de Janeiro, mais especificamente na Baixada e tenho 31 anos. Cursei Ciência da Computação, hoje faço Licenciatura em Matemática e sou Arte Amador, isso mostra que minha trajetória não é nada linear, por isso minha frase preferida é “Quando a gente anda sempre em frente, não pode ir muito longe…” (Saint-Exupéry).
       <br><br>
-      Desde pequeno desenho e me interesso por arte, chegando a pensar em seguir no Desenho Industrial. Contudo, a escolha para o meu primeiro curso superior foi Ciência da Computação, sempre fui apaixonado por jogos e tecnologia, a escolha fez muito sentido no momento e hoje percebo que arte e tecnologia poderia ser conciliadas. Foi um ótimo curso, mas esse período teve alguns pontos baixos que resultaram no trancamento da graduação. Posteriormente, iniciei a Licenciatura em Matemática, um novo curso, em uma nova faculdade, a combinação perfeita das áreas de humanas com a Educação e exatas com a Matemática.
+      Desde pequeno desenho e me interesso por arte, chegando a pensar em seguir no Desenho Industrial. Contudo, a escolha para o meu primeiro curso superior foi Ciência da Computação, sempre fui apaixonado por jogos e tecnologia, a escolha fez muito sentido no momento. Foi um ótimo curso, mas esse período passei por alguns pontos baixos que resultaram no trancamento da graduação. Posteriormente, iniciei a Licenciatura em Matemática, um novo curso, em uma nova faculdade, a combinação perfeita das áreas de humanas com a Educação e exatas com a Matemática.
       <br><br>
-      Nunca deixei a programação e constantemente tento utilizar os conhecimentos na minha vida, acadêmica e cotidiana. Isso fez retornar o estudo e o desejo que encontrar novas oportunidades com os códigos. Esse site é um espaço para compartilhar minha trajetória de estudos e apresentar projetos, pessoais e profissionais. Todos os detalhes e informações estarão descritos no <a href="/curriculo" target="_self"><strong>Currículo</strong></a>.
+      Nunca deixei a programação e constantemente tento utilizar os conhecimentos na minha vida, acadêmica e cotidiana. Isso fez retornar o estudo e o desejo que encontrar novas oportunidades com os códigos. Esse site é um espaço para compartilhar minha trajetória de estudos e apresentar projetos, pessoais e profissionais. Outros detalhes e informações estão descritos no <a href="/curriculo" target="_self"><strong>Currículo</strong></a>.
     </p>
 
-    <!-- Trabalho -->
-    <div class="row">
-      <div class="col-6">
-        <img class="img-fluid" src="https://getbootstrap.com/docs/5.1/examples/heroes/bootstrap-themes.png" alt="{{ALT}}">
+    <!-- Projeto -->
+    <div class="row position-relative align-items-center my-5">
+      <div class="col-lg-6">
+        <img class="img-fluid mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
       </div>
 
-      <div class="col-6">
-        <h4>Lorem ipsum dolor</h4>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-          Fuga explicabo eius, quidem expedita pariatur esse. 
-          Nisi perspiciatis commodi dignissimos quia optio in quae! 
-          Nisi asperiores voluptate quasi inventore reprehenderit officiis! 
-          <a href="#">Veja Mais >></a>
-        </p>
+      <div class="col-lg-6">
+        <div class="project-box">
+          <h4 class="project-title">Lorem ipsum dolor</h4>
+          <p class="project-abstract">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Fuga explicabo eius, quidem expedita pariatur esse. 
+            Nisi perspiciatis commodi dignissimos quia optio in quae! 
+            Nisi asperiores voluptate quasi inventore reprehenderit officiis!  
+          </p>
+          <a class="project-link" href="#">Veja Mais >></a>
+        </div>
       </div>
     </div>
-    <!-- / Trabalho -->
+    <!-- / Projeto -->
   </section>
   <!-- / SEÇÃO: BIOGRAFIA -->
 
   <!-- SEÇÃO: MATEMÁTICA -->
-  <div>
-    <section class="container text-center">
+  <div class="bg-math py-5">
+    <section id="sec-math" class="container text-center">
       <h2>Matemática</h2>
-      <hr class="hr-type1">
+      <hr class="hr-short mb-4">
 
-      <p class="text-left w-75 mx-auto">
+      <p class="text-left w-75 mx-auto sec-math-abstract">
         "O curso de Matemática, Licenciatura, objetiva a formação do Professor de Matemática para os Anos Finais do Ensino Fundamental, Ensino Médio e Educação Profissional; possibilitando ao graduando a aquisição de amplo domínio teórico, experimental e pedagógico da Matemática, além do desenvolvimento de postura investigativa, ética, crítica e capaz de produzir e disseminar conhecimentos científicos e tecnológicos" (IFRJ).
         <br><br>
-        Essa definição está totalmente ligada as características necessárias em várias áreas da vida, e para programação não é diferente. A Matemática é algo fundamental para Computação e acredito que construí (e continuo construindo) uma boa base para o Desenvolvimento Web.
+        Essa definição está totalmente ligada as características necessárias em várias áreas da vida, e para programação não é diferente. A Matemática é algo fundamental para Computação e acredito que construí (e continuo construindo) uma boa base analítica para o Desenvolvimento Web.
       </p>
 
-      <a href="https://portal.ifrj.edu.br/" target="_blank">
-        <img src="assets/img/icon-ifrj.png" alt="Logo Branco IFRJ">
+      <a  href="https://portal.ifrj.edu.br/index.php" target="_blank">
+        <img class="mt-4" src="assets/img/icon-ifrj.png" alt="Logo Branco IFRJ">
       </a>
     </section>
   </div>
@@ -159,7 +161,7 @@
   <section class="container text-center">
     <h2>Arte</h2>
 
-    <hr>
+    <hr class="hr-short mb-4">
 
     <div class="social">          
       <a href="https://www.instagram.com/euchicoart/" target="_blank">
@@ -167,16 +169,16 @@
       </a>
     </div>
 
-    <div class="row gallery">
-      <img class="col-4 img-fluid" src="assets/img/euchico-arte-1.jpg" alt="Cartola, Arte por euChico">
-      <img class="col-4 img-fluid" src="assets/img/euchico-arte-2.jpg" alt="Hanna Lashay, Arte por euChico">
-      <img class="col-4 img-fluid" src="assets/img/euchico-arte-3.jpg" alt="Louis Armstrong, Arte por euChico">
+    <div class="row ">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/euchico-arte-1.jpg" alt="Cartola, Arte por euChico">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/euchico-arte-2.jpg" alt="Hanna Lashay, Arte por euChico">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/euchico-arte-3.jpg" alt="Louis Armstrong, Arte por euChico">
     </div>
 
-    <div class="row gallery hidden-mobile">
-      <img class="col-4 img-fluid" src="assets/img/euchico-arte-4.jpg" alt="Talita Barbosa, Arte por euChico">
-      <img class="col-4 img-fluid" src="assets/img/euchico-arte-5.jpg" alt="John Lennon, Arte por euChico">
-      <img class="col-4 img-fluid" src="assets/img/euchico-arte-6.jpg" alt="Flavia Machado, Arte por euChico">
+    <div class="row d-none d-md-flex">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/euchico-arte-4.jpg" alt="Talita Barbosa, Arte por euChico">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/euchico-arte-5.jpg" alt="John Lennon, Arte por euChico">
+      <img class="col-md-4 mt-4 img-fluid" src="assets/img/euchico-arte-6.jpg" alt="Flavia Machado, Arte por euChico">
     </div>
   </section>
   <!-- / SEÇÃO: ARTE -->
@@ -199,16 +201,16 @@
         </a> 
 
         <div class="social">     
-          <a class="d-inline-block" href="https://github.com/euchico" target="_blank">
+          <a class="d-inline-block" href="http://github.com/euchico" target="_blank">
             <img src="assets/img/social-github.png" alt="GitHub: @euchico">
           </a>
 
-          <a class="d-inline-block" href="https://www.linkedin.com/in/euchico" target="_blank">
+          <a class="d-inline-block" href="http://www.linkedin.com/in/euchico" target="_blank">
             <img src="assets/img/social-linkedin.png" alt="LinkedIn: @euchico">
           </a>
           
-          <a class="d-inline-block" href="https://instragram.com/eu.chico" target="_blank">
-            <img src="assets/img/social-instagram-2.png" alt="Instram: @eu.chico">
+          <a class="d-inline-block" href="http://instragram.com/euchicodev" target="_blank">
+            <img src="assets/img/social-instagram-2.png" alt="Instram: @euchicodev">
           </a>
         </div>
       </div>
