Refatoração geral e renomear conteúdo para textos em português

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<!-- ESTILOS -->
   <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/principal.css">
   <!-- / ESTILOS -->
 
   <link rel="icon" href="assets/img/favicon.ico">
@@ -130,7 +130,7 @@
             Nisi perspiciatis commodi dignissimos quia optio in quae! 
             Nisi asperiores voluptate quasi inventore reprehenderit officiis!  
           </p>
-          <a class="project-link" href="#">Veja Mais >></a>
+          <a class="project-link" href="#"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
@@ -147,7 +147,7 @@
             Nisi perspiciatis commodi dignissimos quia optio in quae! 
             Nisi asperiores voluptate quasi inventore reprehenderit officiis!  
           </p>
-          <a class="project-link" href="#">Veja Mais >></a>
+          <a class="project-link" href="#"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
 
@@ -167,10 +167,10 @@
       <div class="col-md-4 mb-5 mb-md-0 webdev">
         <div>
           <i class="fas fa-book fa-2x webdev-icon"></i>
-          <h2 class="webdev-title">Estudo</h2>
+          <h5 class="webdev-title">Estudo</h5>
           <p class="webdev-abstract">Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
           <a href="#">
-            <button class="btn btn-dark btn-sm" href="#">Acesse</button>
+            <button class="btn btn-dark btn-sm" href="#">Acesse <i class="fas fa-angle-double-right"></i></button>
           </a>
         </div>
       </div>
@@ -179,11 +179,11 @@
       <!-- Projeto 2 -->
       <div class="col-md-4 mb-5 mb-md-0 webdev">
         <div>
-          <i class="fas fa-trophy fa-2x icon"></i>
-          <h2 class="webdev-title">Desafio</h2>
+          <i class="fas fa-trophy fa-2x webdev-icon"></i>
+          <h5 class="webdev-title">Desafio</h5>
           <p class="webdev-abstract">Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
           <a href="#">
-            <button class="btn btn-dark btn-sm" href="#">Acesse</button>
+            <button class="btn btn-dark btn-sm" href="#">Acesse <i class="fas fa-angle-double-right"></i></button>
           </a>
         </div>
       </div>
@@ -192,11 +192,11 @@
       <!-- Projeto 3 -->
       <div class="col-md-4 mb-5 mb-md-0 webdev">
         <div>
-          <i class="fas fa-clipboard fa-2x icon"></i>
-          <h2 class="webdev-title">Receita</h2>
+          <i class="fas fa-clipboard fa-2x webdev-icon"></i>
+          <h5 class="webdev-title">Receita</h5>
           <p class="webdev-abstract">Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
           <a href="#">
-            <button class="btn btn-dark btn-sm" href="#">Acesse</button>
+            <button class="btn btn-dark btn-sm" href="#">Acesse <i class="fas fa-angle-double-right"></i></button>
           </a>
         </div>
       </div>
@@ -212,15 +212,11 @@
     
     <div class="row justify-content-center">
       <div class="col-6 text-center">
-        <h6 class="logo">
-          <span>eu</span><span>CHICO</span>
-        </h6>
-        
+        <h6 class="logo"><span>eu</span><span>CHICO</span></h6>
+
         <hr class="hr-short">
 
-        <a href="mailto:eu.francisco@outlook.com">
-          <span class="email">eu.francisco@outlook.com</span>
-        </a> 
+        <a href="mailto:eu.francisco@outlook.com"><span class="email">eu.francisco@outlook.com</span></a> 
 
         <div class="social">     
           <a class="d-inline-block" href="http://github.com/euchico" target="_blank">
@@ -243,7 +239,7 @@
 
   <!-- SCRIPTS -->
   <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
-  <script type="text/javascript" src="assets/js/main.js"></script>
+  <script type="text/javascript" src="assets/js/principal.js"></script>
 	<!-- / SCRIPTS -->
 </body>
 </html>
