--- a/sobre.html
+++ b/sobre.html
@@ -44,7 +44,7 @@
 	<!-- ESTILOS -->
   <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/principal.css">
   <!-- / ESTILOS -->
 
   <link rel="icon" href="assets/img/favicon.ico">
@@ -130,7 +130,7 @@
             Nisi perspiciatis commodi dignissimos quia optio in quae! 
             Nisi asperiores voluptate quasi inventore reprehenderit officiis!  
           </p>
-          <a class="project-link" href="#">Veja Mais >></a>
+          <a class="project-link" href="#"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
@@ -141,7 +141,7 @@
   <!-- SEÇÃO: MATEMÁTICA -->
   <div class="bg-math py-5">
     <section id="sec-math" class="container text-center">
-      <h2>Matemática</h2>
+      <h3>Matemática</h3>
       <hr class="hr-short mb-4">
 
       <p class="text-left w-75 mx-auto sec-math-abstract">
@@ -158,9 +158,8 @@
   <!-- / SEÇÃO: MATEMÁTICA -->
 
   <!-- SEÇÃO: ARTE -->
-  <section class="container text-center">
-    <h2>Arte</h2>
-
+  <section id="sec-art" class="container text-center">
+    <h3>Arte</h3>
     <hr class="hr-short mb-4">
 
     <div class="social">          
@@ -190,15 +189,11 @@
     
     <div class="row justify-content-center">
       <div class="col-6 text-center">
-        <h6 class="logo">
-          <span>eu</span><span>CHICO</span>
-        </h6>
+        <h5 class="logo"><span>eu</span><span>CHICO</span></h5>
         
         <hr class="hr-short">
 
-        <a href="mailto:eu.francisco@outlook.com">
-          <span class="email">eu.francisco@outlook.com</span>
-        </a> 
+        <a href="mailto:eu.francisco@outlook.com"><span class="email">eu.francisco@outlook.com</span></a> 
 
         <div class="social">     
           <a class="d-inline-block" href="http://github.com/euchico" target="_blank">
@@ -221,7 +216,7 @@
   <!-- SCRIPTS -->
 
   <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
-  <script type="text/javascript" src="assets/js/main.js"></script>
+  <script type="text/javascript" src="assets/js/principal.js"></script>
 	<!-- / SCRIPTS -->
 </body>
 </html>
