Retorno ao projeto.

--- a/curriculo.html
+++ b/curriculo.html
@@ -55,9 +55,9 @@
   <!-- NAVEGAÇÃO -->
   <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand">
         <h1 class="logo">
-          <span>eu</span><span>CHICO</span>
+          <span>eu</span><span>Chico</span>
         </h1>
       </a>
 
@@ -74,10 +74,10 @@
       <!-- opções -->
       <div class="collapse navbar-collapse" id="menu-options">
         <ul class="navbar-nav ms-auto ">
-          <li class="nav-item"><a class="nav-link" href="#" data-nav="inicio">início</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">sobre</a></li>      
-          <li class="nav-item"><a class="nav-link" href="#">portfólio</a></li>
-          <li class="nav-item active"><a class="nav-link disabled" href="#">currículo</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html" data-nav="inicio">início</a></li>
+          <li class="nav-item"><a class="nav-link" href="sobre.html">sobre</a></li>      
+          <li class="nav-item"><a class="nav-link" href="portfolio.html">portfólio</a></li>
+          <li class="nav-item active"><a class="nav-link disabled">currículo</a></li>
           <li class="nav-item"><a class="nav-link" href="#" data-nav="blog">blog</a></li>
 
           <li class="nav-item d-none d-sm-block">
