--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-BR">
-  <meta name="author" content="Francisco de Paula (euCHICO)">
-  <meta name="description" content="Compartilhando conhecimento e buscando oportunidades através de estudos e projetos pessoais.">
-  <meta name="creator" content="Francisco de Paula (euCHICO)">
+  <meta name="author" content="Francisco de Paula (euChico)">
+  <meta name="description" content="Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.">
+  <meta name="creator" content="Francisco de Paula (euChico)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="euCHICO - Francisco de Paula">
-  <meta property="og:description" content="Compartilhando conhecimento e buscando oportunidades através de estudos e projetos pessoais.">
+  <meta property="og:title" content="euChico - Francisco de Paula">
+  <meta property="og:description" content="Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.">
   <meta property="og:url" content="https://euchico.github.io">
   <meta property="og:site_name" content="euCHICO">
   <meta property="og:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
@@ -25,10 +25,10 @@
 
   <meta name="twitter:card" value="summary">
   <meta name="twitter:domain" content="euchico.github.io">
-  <meta name="twitter:site" content="@eueuchico">
-  <meta name="twitter:creator" content="@eueuchico">
-  <meta name="twitter:title" content="euCHICO - Francisco de Paula">
-  <meta name="twitter:description" content="Compartilhando conhecimento e buscando oportunidades através de estudos e projetos pessoais.">
+  <meta name="twitter:site" content="@euchicodev">
+  <meta name="twitter:creator" content="@euchicodev">
+  <meta name="twitter:title" content="euChico - Francisco de Paula">
+  <meta name="twitter:description" content="Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.">
   <meta name="twitter:image" content="https://euchico.github.io/assets/img/euchico-perfil-1.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
@@ -48,7 +48,7 @@
   <!-- / ESTILOS -->
 
   <link rel="icon" href="assets/img/favicon.ico">
-  <title>euCHICO - Francisco de Paula</title>
+  <title>euChico - Francisco de Paula</title>
 <head>
 
 <body id="page-home">
@@ -57,7 +57,7 @@
     <div class="container">
       <a class="navbar-brand">
         <h1 class="logo">
-          <span>eu</span><span>CHICO</span>
+          <span>eu</span><span>Chico</span>
         </h1>
       </a>
 
@@ -75,10 +75,13 @@
       <div class="collapse navbar-collapse" id="menu-options">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item active"><a class="nav-link disabled" data-nav="inicio">início</a></li>
+          
+          <!--
           <li class="nav-item"><a class="nav-link" href="sobre.html">sobre</a></li>      
           <li class="nav-item"><a class="nav-link" href="portfolio.html">portfólio</a></li>
           <li class="nav-item"><a class="nav-link" href="curriculo.html">currículo</a></li>
           <li class="nav-item"><a class="nav-link" href="#" data-nav="blog">blog</a></li>
+          -->
 
           <li class="nav-item d-none d-sm-block">
             <!-- ícone de tema -->
@@ -98,17 +101,17 @@
   <!-- CABEÇALHO -->
   <header class="container">
     <div class="row justify-content-center">
-      <div class="col-md-5 text-center">
+      <div class="col-md-7 text-center">
         <h2>Francisco de Paula</h2>
-        <h3>Desenvolvedor Web</h3> 
-        <hr class="hr-short">
+        <h3>Programador Jr.</h3> 
+        <hr class="hr-curto">
         <p>
-          Compartilhando conhecimento e buscando oportunidades através de estudos e projetos pessoais.
+          Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.
         </p>
       </div>
     </div>
 
-    <hr class="hr-standart">
+    <hr class="hr-padrao">
   </header>
   <!-- / CABEÇALHO -->
 
@@ -122,15 +125,15 @@
       </div>
 
       <div class="col-lg-6">
-        <div class="project-box">
-          <h4 class="project-title">Lorem ipsum dolor</h4>
-          <p class="project-abstract">
+        <div class="projeto-peca">
+          <h4 class="projeto-titulo">Lorem ipsum dolor</h4>
+          <p class="projeto-resumo">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             Fuga explicabo eius, quidem expedita pariatur esse. 
             Nisi perspiciatis commodi dignissimos quia optio in quae! 
             Nisi asperiores voluptate quasi inventore reprehenderit officiis!  
           </p>
-          <a class="project-link" href="#"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+          <a class="projeto-link" href="#"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
@@ -139,15 +142,15 @@
     <!-- Projeto 2 -->
     <div class="row position-relative align-items-center mb-5">
       <div class="col-md-6 order-2 order-md-1">
-        <div class="project-box ">
-          <h4 class="project-title">Lorem ipsum dolor</h4>
-          <p class="project-abstract">
+        <div class="projeto-box ">
+          <h4 class="projeto-titulo">Lorem ipsum dolor</h4>
+          <p class="projeto-resumo">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             Fuga explicabo eius, quidem expedita pariatur esse. 
             Nisi perspiciatis commodi dignissimos quia optio in quae! 
             Nisi asperiores voluptate quasi inventore reprehenderit officiis!  
           </p>
-          <a class="project-link" href="#"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+          <a class="projeto-link" href="#"><span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
 
@@ -208,13 +211,13 @@
 
   <!-- RODAPÉ -->
   <footer class="container">
-    <hr class="hr-standart">
+    <hr class="hr-padrao">
     
     <div class="row justify-content-center">
       <div class="col-6 text-center">
-        <h6 class="logo"><span>eu</span><span>CHICO</span></h6>
+        <h6 class="logo"><span>eu</span><span>Chico</span></h6>
 
-        <hr class="hr-short">
+        <hr class="hr-curto">
 
         <a href="mailto:eu.francisco@outlook.com"><span class="email">eu.francisco@outlook.com</span></a> 
 
