--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
   <main class="container mt-5">
     <div class="text-center mb-5">
       <h2>Portfólio</h2>
-      <hr class="hr-short mb-4">
+      <hr class="hr-curto mb-4">
     </div>
 
     <div class="row">
@@ -214,13 +214,13 @@
 
   <!-- RODAPÉ -->
   <footer class="container">
-    <hr class="hr-standart">
+    <hr class="hr-padrao">
     
     <div class="row justify-content-center">
       <div class="col-6 text-center">
         <h4 class="logo"><span>eu</span><span>CHICO</span></h4>
         
-        <hr class="hr-short">
+        <hr class="hr-curto">
 
         <a href="mailto:eu.francisco@outlook.com"><span class="email">eu.francisco@outlook.com</span></a> 
 
