--- a/portfolio/projeto-template.html
+++ b/portfolio/projeto-template.html
@@ -103,13 +103,13 @@
 
   <!-- RODAPÉ -->
   <footer class="container">
-    <hr class="hr-standart">
+    <hr class="hr-padrao">
     
     <div class="row justify-content-center">
       <div class="col-6 text-center">
         <h class="logo"><span>eu</span><span>CHICO</span></h>
         
-        <hr class="hr-short">
+        <hr class="hr-curto">
 
         <a href="mailto:eu.francisco@outlook.com"><span class="email">eu.francisco@outlook.com</span></a> 
 
