--- a/sobre.html
+++ b/sobre.html
@@ -79,7 +79,7 @@
             <li class="nav-item active"><a class="nav-link disabled">sobre</a></li>      
             <li class="nav-item"><a class="nav-link" href="portfolio.html">portfólio</a></li>
             <li class="nav-item"><a class="nav-link" href="curriculo.html">currículo</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-nav="blog">blog</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-nav="blog ">blog</a></li>
 
             <li class="nav-item d-none d-sm-block">
               <!-- ícone de tema -->
@@ -100,11 +100,11 @@
   <!-- SEÇÃO: BIOGRAFIA -->
   <section id="sec-biography" class="container">
     <div class="text-center">
-      <img class="img-fluid img-profile" src="assets/img/euchico-perfil-2.jpg" alt="Avatar euChico">
+      <img class="img-fluid img-perfil" src="assets/img/euchico-perfil-2.jpg" alt="Avatar euChico">
 
       <h2>Francisco de Paula</h2>
 
-      <hr class="hr-standart">
+      <hr class="hr-padrao">
     </div>
 
     <p class="abstract">
@@ -142,7 +142,7 @@
   <div class="bg-math py-5">
     <section id="sec-math" class="container text-center">
       <h3>Matemática</h3>
-      <hr class="hr-short mb-4">
+      <hr class="hr-curto mb-4">
 
       <p class="text-left w-75 mx-auto sec-math-abstract">
         "O curso de Matemática, Licenciatura, objetiva a formação do Professor de Matemática para os Anos Finais do Ensino Fundamental, Ensino Médio e Educação Profissional; possibilitando ao graduando a aquisição de amplo domínio teórico, experimental e pedagógico da Matemática, além do desenvolvimento de postura investigativa, ética, crítica e capaz de produzir e disseminar conhecimentos científicos e tecnológicos" (IFRJ).
@@ -160,7 +160,7 @@
   <!-- SEÇÃO: ARTE -->
   <section id="sec-art" class="container text-center">
     <h3>Arte</h3>
-    <hr class="hr-short mb-4">
+    <hr class="hr-curto mb-4">
 
     <div class="social">          
       <a href="https://www.instagram.com/euchicoart/" target="_blank">
@@ -185,13 +185,13 @@
 
   <!-- RODAPÉ -->
   <footer class="container">
-    <hr class="hr-standart">
+    <hr class="hr-padrao">
     
     <div class="row justify-content-center">
       <div class="col-6 text-center">
         <h5 class="logo"><span>eu</span><span>CHICO</span></h5>
         
-        <hr class="hr-short">
+        <hr class="hr-curto">
 
         <a href="mailto:eu.francisco@outlook.com"><span class="email">eu.francisco@outlook.com</span></a> 
 
