--- a/projeto/projeto-template.html
+++ b/projeto/projeto-template.html
@@ -34,9 +34,9 @@
   <!-- / METAS -->
 
   <!-- ESTILOS -->
-  <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/principal.css">
+  <link rel="stylesheet" type="text/css" href="../assets/css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../assets/css/principal.css">
   <!-- / ESTILOS -->
 
   <!-- FONTE -->
@@ -47,10 +47,10 @@
   <!-- / FONTE -->
 
   <link rel="icon" href="{ LINK }">
-  <title>euChico - Sobre</title>
+  <title>euChico - Projeto 1</title>
 </head>
 
-<body id="sobre">
+<body>
   <!-- FUNDO NAVEGAÇÃO -->
   <div class="fundo-navegacao">
     <!-- NAVEGAÇÃO -->
@@ -76,8 +76,8 @@
         <div class="collapse navbar-collapse" id="menu-options">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="/" data-nav="inicio"><div class="decoracao decoracao-animada"></div>início</a></li>
-            <li class="nav-item active"><a class="nav-link disabled"><div class="decoracao"></div>sobre</a></li>      
-            <li class="nav-item"><a class="nav-link" href="portfolio"><div class="decoracao decoracao-animada"></div>portfólio</a></li>
+            <li class="nav-item"><a class="nav-link" href="sobre"><div class="decoracao decoracao-animada"></div>sobre</a></li>      
+            <li class="nav-item active"><a class="nav-link disabled"><div class="decoracao"></div>portfólio</a></li>
             <li class="nav-item"><a class="nav-link" href="curriculo"><div class="decoracao decoracao-animada"></div>currículo</a></li>
             
             <li class="nav-item"><a class="nav-link" href="https://dev.to/euchicodev" target="_blank" data-nav="blog"><div class="decoracao decoracao-animada"></div>blog</a></li>
@@ -100,8 +100,8 @@
   <!-- / FUNDO NAVEGAÇÃO -->
 
   <!-- SCRIPTS -->
-  <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
-  <script type="text/javascript" src="assets/js/principal.js"></script>
+  <script type="text/javascript" src="../assets/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="../assets/js/principal.js"></script>
 	<!-- / SCRIPTS -->
 </body>
 </html>
