--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
           <li class="nav-item active"><a class="nav-link" disabled><div class="decoracao"></div>portfólio</a></li>
           <li class="nav-item"><a class="nav-link" href="curriculo"><div class="decoracao decoracao-animada"></div>currículo</a></li>
           
-          <li class="nav-item"><a class="nav-link" href="https://dev.to/euchicodev" target="_blank" data-nav="blog"><div class="decoracao decoracao-animada"></div>blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://dev.to/euchicodev" target="_blank" data-nav="blog">blog</a></li>
 
           <li class="nav-item d-none d-sm-block">
             <!-- ícone de tema -->
