--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <li class="nav-item"><a class="nav-link" href="portfolio.html"><div class="decoracao decoracao-animada"></div>portfólio</a></li>
           <li class="nav-item"><a class="nav-link" href="curriculo.html"><div class="decoracao decoracao-animada"></div>currículo</a></li>
           
-          <li class="nav-item"><a class="nav-link" href="https://dev.to/euchicodev" target="_blank" data-nav="blog"><div class="decoracao decoracao-animada"></div>blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://dev.to/euchicodev" target="_blank" data-nav="blog">blog</a></li>
 
           <li class="nav-item d-none d-sm-block">
             <!-- ícone de tema -->
