--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       <div class="collapse navbar-collapse" id="menu-options">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item active"><a class="nav-link disabled" data-nav="inicio"><div class="decoracao"></div>início</a></li>
-          <li class="nav-item"><a class="nav-link" href="sobre.html"><div class="decoracao decoracao-animada"></div>sobre</a></li>      
-          <li class="nav-item"><a class="nav-link" href="portfolio.html"><div class="decoracao decoracao-animada"></div>portfólio</a></li>
-          <li class="nav-item"><a class="nav-link" href="curriculo.html"><div class="decoracao decoracao-animada"></div>currículo</a></li>
+          <li class="nav-item"><a class="nav-link" href="sobre"><div class="decoracao decoracao-animada"></div>sobre</a></li>      
+          <li class="nav-item"><a class="nav-link" href="portfolio"><div class="decoracao decoracao-animada"></div>portfólio</a></li>
+          <li class="nav-item"><a class="nav-link" href="curriculo"><div class="decoracao decoracao-animada"></div>currículo</a></li>
           
           <li class="nav-item"><a class="nav-link" href="https://dev.to/euchicodev" target="_blank" data-nav="blog">blog</a></li>
 
