--- a/sobre.html
+++ b/sobre.html
@@ -56,7 +56,7 @@
     <!-- NAVEGAÇÃO -->
     <nav class="navbar navbar-expand-sm navbar-light">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
           <h1 class="logo">
             <span>eu</span><span>Chico</span>
           </h1>
