--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <!-- NAVEGAÇÃO -->
   <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="/">
-        <h1 class="logo">
+      <a class="navbar-brand disabled">
+        <h1 class="user-select-none logo">
           <span>eu</span><span>Chico</span>
         </h1>
       </a>
