--- a/projeto/projeto-template.html
+++ b/projeto/projeto-template.html
@@ -57,7 +57,7 @@
     <nav class="navbar navbar-expand-sm navbar-light">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <h1 class="logo">
+          <h1 class="user-select-none logo">
             <span>eu</span><span>Chico</span>
           </h1>
         </a>
