--- a/curriculo.html
+++ b/curriculo.html
@@ -74,8 +74,8 @@
       <div class="collapse navbar-collapse" id="menu-options">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="/" data-nav="inicio"><div class="decoracao decoracao-animada"></div>início</a></li>
-          <li class="nav-item"><a class="nav-link" href="sobre.html"><div class="decoracao decoracao-animada"></div>sobre</a></li>      
-          <li class="nav-item"><a class="nav-link" href="portfolio.html"><div class="decoracao decoracao-animada"></div>portfólio</a></li>
+          <li class="nav-item"><a class="nav-link" href="sobre"><div class="decoracao decoracao-animada"></div>sobre</a></li>      
+          <li class="nav-item"><a class="nav-link" href="portfolio"><div class="decoracao decoracao-animada"></div>portfólio</a></li>
           <li class="nav-item active"><a class="nav-link disabled" ><div class="decoracao"></div>currículo</a></li>
           
           <li class="nav-item"><a class="nav-link" href="https://dev.to/euchicodev" target="_blank" data-nav="blog">blog</a></li>
