--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <title>euChico - Francisco de Paula</title>
 </head>
 
-<body id="inicio">
+<body id="pagina-inicio">
   <!-- NAVEGAÇÃO -->
   <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container">
@@ -94,6 +94,54 @@
     </div>
   </nav>
   <!-- / NAVEGAÇÃO -->
+
+  <!-- CABEÇALHO -->
+  <header class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-7 text-center">
+        <h2>Francisco de Paula</h2>
+        <h3>Programador Jr.</h3> 
+        <hr class="hr-curto">
+        <p>
+          Compartilhando minha trajetória profissional, projetos pessoais e estudos de desenvolvimento.
+        </p>
+      </div>
+    </div>
+
+    <hr class="hr-padrao">
+  </header>
+  <!-- / CABEÇALHO -->
+
+  <!-- RODAPÉ -->
+  <footer class="container">
+    <hr class="hr-padrao">
+    
+    <div class="row justify-content-center">
+      <div class="col-sm-6 col-12 text-center">
+        <h6 class="logo"><span>eu</span><span>Chico</span></h6>
+
+        <hr class="hr-curto">
+
+        <a href="mailto:eu.francisco@outlook.com"><span class="email">eu.francisco@outlook.com</span></a> 
+
+        <div class="social">     
+          <a class="d-inline-block" href="http://github.com/euchico" target="_blank">
+            <img src="assets/img/social-github.png" alt="GitHub: @euchico">
+          </a>
+
+          <a class="d-inline-block" href="http://www.linkedin.com/in/euchico" target="_blank">
+            <img src="assets/img/social-linkedin.png" alt="LinkedIn: @euchico">
+          </a>
+          
+          <a class="d-inline-block" href="http://instragram.com/euchicodev" target="_blank">
+            <img src="assets/img/social-instagram.png" alt="Instram: @euchicodev">
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- / RODAPÉ -->
+  
 
   <!-- SCRIPTS -->
   <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
