--- a/portfolio.html
+++ b/portfolio.html
@@ -95,6 +95,37 @@
   </nav>
   <!-- / NAVEGAÇÃO -->
 
+  <!-- RODAPÉ -->
+  <footer class="container">
+    <hr class="hr-padrao">
+    
+    <div class="row justify-content-center">
+      <div class="col-sm-6 col-12 text-center">
+        <h6 class="logo"><span>eu</span><span>Chico</span></h6>
+
+        <hr class="hr-curto">
+
+        <a href="mailto:eu.francisco@outlook.com"><span class="email">eu.francisco@outlook.com</span></a> 
+
+        <div class="social">     
+          <a class="d-inline-block" href="http://github.com/euchico" target="_blank">
+            <img src="assets/img/social-github.png" alt="GitHub: @euchico">
+          </a>
+
+          <a class="d-inline-block" href="http://www.linkedin.com/in/euchico" target="_blank">
+            <img src="assets/img/social-linkedin.png" alt="LinkedIn: @euchico">
+          </a>
+          
+          <a class="d-inline-block" href="http://instragram.com/euchicodev" target="_blank">
+            <img src="assets/img/social-instagram.png" alt="Instram: @euchicodev">
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- / RODAPÉ -->
+  
+
   <!-- SCRIPTS -->
   <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript" src="assets/js/principal.js"></script>
