--- a/sobre.html
+++ b/sobre.html
@@ -99,6 +99,30 @@
   </div>
   <!-- / FUNDO NAVEGAÇÃO -->
 
+  <!-- PROJETO -->
+  <section class="container">
+    <div class="row position-relative align-items-center mb-5">
+      <div class="col-lg-6">
+        <img class="img-fluid d-none d-lg-block mb-2" src="assets/img/portfolio-home-1.png" alt="{{ALT}}">
+        <img class="img-fluid d-block d-lg-none mb-2" src="assets/img/portfolio-home-2.png" alt="{{ALT}}">
+      </div>
+
+      <div class="col-lg-6">
+        <div class="projeto-artigo">
+          <h4 class="projeto-titulo">Lorem ipsum dolor</h4>
+          <p class="projeto-resumo">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Fuga explicabo eius, quidem expedita pariatur esse. 
+            Nisi perspiciatis commodi dignissimos quia optio in quae! 
+            Nisi asperiores voluptate quasi inventore reprehenderit officiis!  
+          </p>
+          <a class="projeto-link" href="#"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- / PROJETO -->
+
   <!-- RODAPÉ -->
   <footer class="container">
     <hr class="hr-padrao">
